--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
-<html><head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style>
-body {
-  display:flex;
-  min-height:90vh;
-  justify-content:center
+body{
+margin-left:20%;
+margin-right: 20%;
+
 }
-
-.left{
-    position: absolute;
-    right: 119px;
-    top: 36%;
-    /* justify-content: flex-end; */
-    /* display: flex; */
-    color: #260a52;
-    font-weight: bold;
-    font-family: math;
-    font-size: 30px;
-    width: 203px;}
-body >div {margin:auto;}
 </style>
-</head>
-<body style="
-    background: #42bbf5b8;
-">
+  </head>
+  <body style="background: #42bbf5b8;">
 
-<img src="banner-1.jpg">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<div class="left">
+
+<form>
+  <div class="form-group row">
+    <div for="staticEmail" class="col-sm-9 col-form-label">
+	<img src="banner-1.jpg" class="img-thumbnail" >
+
+</div>
+    <div class="col-sm-3">
+
+<div  style="height: 100%;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+}">
 
 <span>Fecha 30 de septiembre </span>
 <span>al</span>
@@ -34,10 +44,14 @@ body >div {margin:auto;}
 
 <hr/>
 
-<a href="https://api.whatsapp.com/send?phone=999655209" target="_blank">Inscribete AQUI</a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSentB3IDax3nZTUujK-8Kbz37YWD6INIjU2n7ILeY38xhLQBA/viewform?usp=sf_link" target="_blank">Inscribete AQUI</a>
 
 </div>
+    </div>
+  </div>
+</form>
 
 
+  </body>
+</html>
 
-</body></html>
